--- a/index.html
+++ b/index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Pista de Tenis</title>
+    <title>Book Tennis Court</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Cómo Reservar una Pista de Tenis</h1>
+        <h1>Book Tennis Court</h1>
     </header>
     <main>
         <section class="step">
-            <h2>PRIMER PASO</h2>
-            <p>Entrar al siguiente link:</p>
-            <a href="https://calendar.google.com/calendar/u/0/embed?src=torrenueva.tennis@gmail.com&ctz=Europe/Madrid" target="_blank">
-                Reserva de Pista de Tenis
-            </a>
+            <h2>STEP 1</h2>
+            <p>Enter the following link:</p>
+            <a href="https://calendar.google.com/calendar/u/0/embed?src=torrenueva.tennis@gmail.com&ctz=Europe/Madrid" target="_blank">Google Calendar</a>
+            <p>And then click the + icon (highlighted in red, step 1).</p>
+            <div class="image-container">
+                <img src="images/1.jpg" alt="Google Calendar">
+            </div>
         </section>
         <section class="step">
-            <h2>SEGUNDO PASO</h2>
-            <p>Agregar a Google Calendar la fecha a jugar.</p>
-            <img src="google-calendar-example.jpg" alt="Ejemplo de Google Calendar">
+            <h2>STEP 2</h2>
+            <p>You will be redirected to another page, where you should click the ADD button (highlighted in red, step 2).</p>
+            <div class="image-container">
+                <img src="images/2.jpg" alt="ADD button">
+            </div>
         </section>
         <section class="step">
-            <h2>TERCER PASO</h2>
-            <p>Mandar un correo a <a href="mailto:torrenueva.tennis@gmail.com">torrenueva.tennis@gmail.com</a> para confirmar la reserva.</p>
-            <img src="email-example.jpg" alt="Ejemplo de correo de confirmación">
+            <h2>STEP 3</h2>
+            <p>You need to select the day and time to book the court in the calendar (highlighted in red, step 3).</p>
+            <div class="image-container">
+                <img src="images/3.jpg" alt="Calendar">
+            </div>
+        </section>
+        <section class="step">
+            <h2>STEP 4</h2>
+            <p>You will see a new tab:</p>
+            <ul>
+                <li>Add a title (highlighted in red, step 4').</li>
+                <li>Add torrenueva.tennis@gmail.com as a guest (highlighted in red, step 4'').</li>
+                <li>Save the event (highlighted in red, step 4''').</li>
+            </ul>
+            <div class="image-container">
+                <img src="images/4.jpg" alt="Calendar Event">
+            </div>
+        </section>
+        <section class="step">
+            <h2>STEP 5</h2>
+            <p>Click the SEND button (highlighted in red, step 5).</p>
+            <p>Then you will see the court booked in the calendar.</p>
+            <div class="image-container">
+                <img src="images/5.jpg" alt="Google Calendar">
+            </div>
+        </section>
+        <section class="step">
+            <h2>STEP 6</h2>
+            <p>If you want to cancel the booking, you will see the option in the calendar.</p>
+            <div class="image-container">
+                <img src="images/5.jpg" alt="Google Calendar">
+            </div>
         </section>
     </main>
     <footer>
