--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <img src="images/4.jpg" alt="Calendar Event">
         </section>
         <section class="step">
-            <h2>STEP 5</h2>
+            <h2>DELETE RESERVATION</h2>
             <p>Click the SEND button (highlighted in red, step 5).</p>
             <p>Then you will see the court booked in the calendar.</p>
             <img src="images/5.jpg" alt="Google Calendar">
         </section>
         <section class="step">
             <h2>STEP 6</h2>
-            <p>If you want to cancel the booking, you will see the option in the calendar.</p>
-            <img src="images/5.jpg" alt="Google Calendar">
+            <p>If you want to cancel the booking, you will need to click on the tennis court reservation, then click the recycle bin icon, and finally the send button (highlighted in red).</p>
+            <img src="images/6.jpg" alt="Google Calendar">
         </section>
     </main>
     <footer>
